6.2/_sources/citing.rst.txt
Citing **yadg**
---------------
**yadg** is currently being developed at the `ConCat Lab <https://tu.berlin/en/concat>`_ at Technische Universität Berlin, Berlin, Germany. It has been previously developed at `Materials for Energy Conversion lab <https://www.empa.ch/web/s501>`_ at Empa, Dübendorf, Switzerland. If you find **yadg** useful, please cite our recent paper [Kraus2022b]_. You may also want to refer to our previous work where **yadg** was first introduced [Kraus2022a]_.

We extend no warranty, neither express nor implied.

.. [Kraus2022b]
  Kraus, P.; Vetsch, N.; Battaglia, C. *yadg: yet another datagram*, Journal of Open Source Software **2022**, *7*, 4166, DOI: https://doi.org/10.21105/joss.04166

.. [Kraus2022a]
  Kraus, P.; Wolf, E.H.; Prinz, C.; Bellini, G.; Trunschke, A.; Schlögl, R. *Towards automation of operando experiments: a case study in contactless conductivity measurements*, Digital Discovery **2022**, *1*, 241, DOI: https://doi.org/10.1039/D1DD00029B


Papers related to yadg
``````````````````````
If you found **yadg** useful, and would like your publication listed, let us know!

.. [#]
  Evans, M. L.; Rignanese, G.-M.; Elbert, D.; Kraus. P; *Datatractor: Metadata, automation, and registries for extractor interoperability in the chemical and materials sciences*, arXiv:2410.18839 [physics.data-an] **2024**, DOI: https://doi.org/10.48550/arXiv.2410.18839

.. [#]
  Stüble, P.; Müller, C.; Bohn, N.; Müller, M.; Hofmann, A.; Akçay, T.; Klemens, J.; Koeppe, A.; Kolli, S.; Rajagopal, D.; Geßwein, H.; Schabel, W.; Scharfer, P.; Selzer, M.; Binder, J. R.; Smith, A.; *From Powder to Pouch Cell: Setting up a Sodium-Ion Battery Reference System Based on Na3V2(PO4)3/C and Hard Carbon*, Batteries & Supercaps **2024**, e202400406, DOI: https://doi.org/10.1002/batt.202400406

.. [#]
  Senocrate, A.; Bernasconi, F.; Kraus, P.; Plainpan, N.; Trafkowski, J.; Tolle, F.; Weber, T.; Sauter, U.; Battaglia, C.; *Parallel experiments in electrochemical CO2 reduction enabled by standardized analytics*, Nature Catalysis **2024**, *7*, 742, DOI: https://doi.org/10.1038/s41929-024-01172-x

.. [#]
  Kraus, P.; Bainglass, E.; Ramirez, F. F.; Svaluto-Ferro, E.; Ercole, L.; Kunz, B.; Huber, S. P.; Plainpan, N.; Marzari, N.; Battaglia, C.; Pizzi, G. *A bridge between trust and control: computational workflows meet automated battery cycling*, Journal of Materials Chemistry A **2024**, *12*, 10773, DOI: https://doi.org/10.1039/D3TA06889G

.. [#]
  Bernasconi, F.; Senocrate, A.; Kraus, P.; Battaglia, C.; *Enhancing C≥2 product selectivity in electrochemical CO2 reduction by controlling the microstructure of gas diffusion electrodes*, EES Catalysis **2023**, *1*, 1009, DOI: https://doi.org/10.1039/D3EY00140G
